[gd_scene load_steps=10 format=3 uid="uid://b2hmdq002wcfr"]

[ext_resource type="Script" path="res://game_objects/game.gd" id="1_0mmer"]
[ext_resource type="Texture2D" uid="uid://diklgdpg3vw0q" path="res://Assets/forestBackground2.png" id="2_itxs7"]
[ext_resource type="PackedScene" uid="uid://dm6j755qo6xfn" path="res://menus/Shop.tscn" id="3_he514"]
[ext_resource type="PackedScene" uid="uid://5h8nnbsv72hb" path="res://game_objects/screen_boundary.tscn" id="5_socs7"]
[ext_resource type="PackedScene" uid="uid://bsfyjc7kx80jf" path="res://menus/pause_menu.tscn" id="7_vyuec"]
[ext_resource type="PackedScene" uid="uid://cdy6q0kt228x4" path="res://game_objects/base.tscn" id="8_sog05"]
[ext_resource type="AudioStream" uid="uid://dv7xqiohq67ny" path="res://Assets/Audio/ForestWalk-320bit(chosic.com).mp3" id="9_papif"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_7hlav"]
vertices = PackedVector2Array(738, 229, 1020, 683, 912, 637, 774, 567, 668, 399, 1092, 891, 1442, 1085, -269, 1067, 948, 903, 308, 871, 272, 943, 218, 517, 350, 475, 426, 551, 374, 733, 854, 779, 806, 883, 746, 781, 552, 651, 652, 609, 618, 715, 546, 695, 840, 121, 1420, -284, 686, 729, 408, 759, 712, 795, 768, 641, 214, 301, 344, 305, 446, 697, 448, 423, 616, 337, 626, 425, 430, 309, 688, 225, 330, 959, 758, 901, 436, 647, 892, -1, 820, -49, -246, -230, 764, 93, 784, 145, 138, 203, 688, 545, 60, 303, 84, 479)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7, 8), PackedInt32Array(9, 10, 7, 11, 12, 13, 14), PackedInt32Array(15, 8, 16, 17), PackedInt32Array(18, 19, 20, 21), PackedInt32Array(0, 22, 23, 6, 1), PackedInt32Array(24, 15, 17, 25, 20), PackedInt32Array(25, 17, 26), PackedInt32Array(27, 3, 2, 15), PackedInt32Array(12, 11, 28, 29), PackedInt32Array(24, 27, 15), PackedInt32Array(30, 21, 20, 25, 14), PackedInt32Array(31, 32, 33, 13), PackedInt32Array(32, 31, 34, 35), PackedInt32Array(36, 25, 26, 37), PackedInt32Array(38, 30, 14), PackedInt32Array(23, 39, 40), PackedInt32Array(41, 23, 40), PackedInt32Array(41, 40, 42), PackedInt32Array(41, 42, 43, 0, 35), PackedInt32Array(29, 28, 44), PackedInt32Array(6, 5, 1), PackedInt32Array(4, 3, 45, 33), PackedInt32Array(18, 38, 13, 33, 45, 19), PackedInt32Array(22, 39, 23), PackedInt32Array(43, 22, 0), PackedInt32Array(41, 35, 34, 29, 44), PackedInt32Array(41, 44, 46), PackedInt32Array(7, 41, 46, 47), PackedInt32Array(7, 47, 11), PackedInt32Array(37, 16, 8), PackedInt32Array(37, 8, 7, 36), PackedInt32Array(10, 36, 7), PackedInt32Array(38, 14, 13), PackedInt32Array(45, 13, 45)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-246, -230, 1420, -284, 1442, 1085, -269, 1067), PackedVector2Array(60, 303, 138, 203, 214, 301, 218, 517, 84, 479), PackedVector2Array(344, 305, 350, 475, 426, 551, 448, 423, 430, 309), PackedVector2Array(616, 337, 688, 225, 738, 229, 668, 399, 626, 425), PackedVector2Array(784, 145, 764, 93, 820, -49, 892, -1, 840, 121), PackedVector2Array(854, 779, 912, 637, 1020, 683, 1092, 891, 948, 903), PackedVector2Array(652, 609, 688, 545, 688, 545, 774, 567, 768, 641, 686, 729, 618, 715), PackedVector2Array(436, 647, 552, 651, 546, 695, 446, 697), PackedVector2Array(308, 871, 374, 733, 408, 759, 330, 959, 272, 943), PackedVector2Array(712, 795, 746, 781, 806, 883, 758, 901)])

[sub_resource type="Curve2D" id="Curve2D_24n0c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -125, 594, 0, 0, 0, 0, -122, -100, 0, 0, 0, 0, 1314, -93, 0, 0, 0, 0, 1316, 681)
}
point_count = 4

[node name="Node" type="Node"]
script = ExtResource("1_0mmer")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_itxs7")
expand_mode = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="Node2D"]

[node name="ScreenBoundary" parent="Node2D/World" instance=ExtResource("5_socs7")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Node2D/World"]
position = Vector2(-9, 13)
navigation_polygon = SubResource("NavigationPolygon_7hlav")

[node name="base" parent="Node2D/World" instance=ExtResource("8_sog05")]
position = Vector2(533, 828)

[node name="SpawnerPath" type="Path2D" parent="Node2D/World"]
curve = SubResource("Curve2D_24n0c")

[node name="SpawnerPathFollow" type="PathFollow2D" parent="Node2D/World/SpawnerPath"]
position = Vector2(-125, 594)
rotation = -1.56647

[node name="pause_menu" parent="." instance=ExtResource("7_vyuec")]

[node name="Shop" parent="." instance=ExtResource("3_he514")]

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_papif")
autoplay = true
bus = &"Music"

[connection signal="picked_decoy" from="Shop" to="." method="_on_shop_picked_decoy"]
